syntax = "proto3";

package oak.handle;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  // Fully qualified path to the protobuf message sent from a `Sender` or received from a
  // `Receiver`.
  string message_type = 79658;
}

// Sender handle for an Oak channel.
// This type is sent over the wire, but in types generated by prost it is replaced with
// [`oak::io::Sender`](../io/struct.Sender.html).
message Sender {
  fixed64 id = 1;
}

// Receiver handle for an Oak channel.
// This type is sent over the wire, but in types generated by prost it is replaced with
// [`oak::io::Receiver`](../io/struct.Receiver.html).
message Receiver {
  fixed64 id = 1;
}
